# protein_alignment_benchmarks

./: .env.example  .gitignore  README.md  align.csv  align_go_safe.csv  pyproject.toml  requirements.txt
data/: download_allobench.sh  download_bindb.sh  download_bioreason_go.sh  download_ddg.sh  download_passerrank.sh  download_pdbbind.sh  download_ppi.sh  download_proteingym.sh
src/: build_train_set.py  build_trainset.py  config.py  datasets.py  download_bioreason_go.sh  download_ddg.sh  download_proteingym.sh  format_benchmark.py  scan_leakage.py
